Fix the overlapping text on the Subscribe section, add hx to the titles

--- a/style.css
+++ b/style.css
@@ -727,7 +727,7 @@ li {
   .subscribe-absolute {
     justify-content: center;
     align-items: center;
-    text-align: left;
+    text-align: center;
     padding: 0 30px;
     padding-left: 0;
     margin-left: 0;
@@ -769,14 +769,30 @@ li {
   }
 
   .subscribe-images {
-    transform: translate(-100px, -20px);
+    transform: translate(-100px, 50px);
     width: 130px;
     height: 200px;
     opacity: 0.9;
   }
 
   .subscribe-text1 {
-    width: 100%;
+    width: 70%;
+    margin: 0 auto;
+    transform: translateY(-50px);
+  }
+
+  .subscribe-text2 {
+    transform: translateY(-30px);
+  }
+
+  .subscribe-content {
+    height: 485px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .subscribe-images {
+    transform: translate(100px, 50px);
   }
 }
 
@@ -867,7 +883,7 @@ li {
   }
 
   .subscribe-images {
-    transform: translate(40px, 50px);
+    transform: translate(60px, 50px);
   }
 
   .subscribe-content {
@@ -880,6 +896,10 @@ li {
     line-height: 20px;
     width: 100%;
     transform: translateY(-5px);
+  }
+
+  .subscribe-text2 {
+    transform: translateY(5px);
   }
 
   .signup-details .subscribe-text1 {
